--- a/test/conf/app.conf
+++ b/test/conf/app.conf
@@ -6,6 +6,6 @@ mysqluser = "root"
 mysqlpass = "********"
 mysqlurl = "127.0.0.1"
 mysqlport = "3306"
-mysqldbname   = "goTest"
+mysqldbname   = "gotest"
 
 sessionon = true
