--- a/ci.yml
+++ b/ci.yml
@@ -16,7 +16,7 @@ script:
 
 after_success:
 #  - chmod 600 ~/.ssh/id_rsa   #还是Linux文件权限问题
-  - ssh root@139.199.103.169 -o StrictHostKeyChecking=no "cd /root/go/src/github.com/backend/test && chmod +x ./citest.sh && ./citest.sh"
+  - ssh root@139.199.103.169 -o StrictHostKeyChecking=no "cd /root/go/src/github.com/backend && chmod +x ./citest.sh && ./citest.sh"
 
 addons:
   ssh_known_hosts: 139.199.103.169
