--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,11 @@ script:
   - echo "script"
   - pwd
   - go version
-  - go vet
-
+  - ./bin/run-test
 
 after_success:
 #  - chmod 600 ~/.ssh/id_rsa   #还是Linux文件权限问题
-  - ssh root@139.199.103.169 -o StrictHostKeyChecking=no "cd /root/go/src/github.com/backend && chmod +x ./citest.sh && ./citest.sh"
+  - ssh root@139.199.103.169 -o StrictHostKeyChecking=no "cd /root/go/src/github.com/backend && chmod +x ./deploy.sh && ./deploy.sh"
 
 addons:
   ssh_known_hosts: 139.199.103.169
