--- a/conf/app.conf
+++ b/conf/app.conf
@@ -4,8 +4,15 @@ runmode = dev
 
 mysqluser = "root"
 mysqlpass = "********"
+mysqlurl = "139.199.103.169"
+mysqlport = "3306"
+mysqldbname = "gotest"
+
+
+mysqluserTest = "root"
+mysqlpassTest = "********"
 mysqlurl = "127.0.0.1"
 mysqlport = "3306"
-mysqldbname   = "gotest"
+mysqldbname = "gotest"
 
 sessionon = true
