--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
   - echo "script"
   - pwd
   - go version
-  - ./bin/run-test
+  - ./bin/run-test.sh
 
 after_success:
 #  - chmod 600 ~/.ssh/id_rsa   #还是Linux文件权限问题
