--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,10 @@ script:
   - ./bin/run-test.sh
 
 after_success:
-#  - chmod 600 ~/.ssh/id_rsa   #还是Linux文件权限问题
-  - ssh root@139.199.103.169 -o StrictHostKeyChecking=no "cd /root/go/src/github.com/backend && chmod +x ./deploy.sh && ./deploy.sh"
+  - ssh-keygen -t rsa
+  - ssh-copy-id root@139.199.103.169
+  - chmod 700 ~/.ssh/   #还是Linux文件权限问题
+  - ssh root@139.199.103.169 -o StrictHostKeyChecking=no "git clone -b test https://github.com/leungyukshing/IM-BackEnd.git && cd /root/go/src/github.com/backend && chmod +x ./deploy.sh && ./deploy.sh"
 
 addons:
   ssh_known_hosts: 139.199.103.169
