--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ after_success:
   - ssh-keygen -t rsa
   - ssh-copy-id root@139.199.103.169
   - chmod 700 ~/.ssh/   #还是Linux文件权限问题
-  - ssh root@139.199.103.169 -o StrictHostKeyChecking=no "git clone -b test https://github.com/leungyukshing/IM-BackEnd.git && cd /root/go/src/github.com/backend && chmod +x ./deploy.sh && ./deploy.sh"
+  - ssh root@139.199.103.169 -o StrictHostKeyChecking=no " cd /root/go/src/github.com/backend && git pull && chmod +x ./deploy.sh && ./deploy.sh"
 
 addons:
   ssh_known_hosts: 139.199.103.169
