test ci-- docker stop

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
 - chmod +x ./bin/run-test.sh
 - "./bin/run-test.sh"
 after_success:
-- ssh root@139.199.103.169 -o StrictHostKeyChecking=no -i ~/.ssh/rsa " cd /root/go/src/github.com/backend
+- ssh root@139.199.103.169 -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa " cd /root/go/src/github.com/backend
   && git pull && chmod +x ./deploy.sh && ./deploy.sh"
 addons:
   ssh_known_hosts: 139.199.103.169
