--- a/conf/app.conf
+++ b/conf/app.conf
@@ -3,7 +3,7 @@ httpport = 8080
 runmode = dev
 
 mysqluser = "root"
-mysqlpass = "********"
+mysqlpass = "940115510"
 mysqlurl = "139.199.103.169"
 mysqlport = "3306"
 mysqldbname = "gotest"
