fix online db url

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -11,8 +11,6 @@ mysqldbname = "gotest"
 
 mysqluserTest = "root"
 mysqlpassTest = "********"
-mysqlurl = "127.0.0.1"
-mysqlport = "3306"
-mysqldbname = "gotest"
+mysqlurlTest = "127.0.0.1"
 
 sessionon = true
