test: use remote mysql

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -2,10 +2,10 @@ appname = Test
 httpport = 8080
 runmode = dev
 
-mysqluser = "root"
-mysqlpass = "940115510"
-mysqlurl = "127.0.0.1"
-mysqlport = "3306"
+mysqluser = "test"
+mysqlpass = "test1234"
+mysqlurl = "cdb-ry07ms94.cd.tencentcdb.com"
+mysqlport = "10038"
 mysqldbname = "gotest"
 
 
