test: change mysql user

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -2,7 +2,7 @@ appname = Test
 httpport = 8080
 runmode = dev
 
-mysqluser = "test"
+mysqluser = "im_user"
 mysqlpass = "test1234"
 mysqlurl = "cdb-ry07ms94.cd.tencentcdb.com"
 mysqlport = "10038"
