--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ script:
 - pwd
 - go version
 - chmod +x ./bin/run-test.sh
+- echo ${TRAVIS_COMMIT_MESSAGE}
 - ./bin/run-test.sh ${TRAVIS_COMMIT_MESSAGE}
 after_success:
 - ssh root@139.199.103.169 -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa " cd /root/go/src/github.com/backend
