--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,5 +13,5 @@ services:
   mysql:
     image: mysql:5.7
     environment:
-      MYSQL_DATABASE: ci
-      MYSQL_ROOT_PASSWORD: ci
+      MYSQL_DATABASE: gotest
+      MYSQL_ROOT_PASSWORD: "******"
